<resources>
    <string name="app_name">Unit Converter</string>
    <string name="header">Unit\nConverter</string>
    <string name="version_number">Unit Converter\nVersion 1.1.0</string>
    <string name="no_email_app">No Email Apps Available</string>
    <string name="share_text">Hi, Check out this app</string>
    <string name="report_bug">Report A Bug</string>
    <string name="about">About</string>
    <string name="watch">Watch</string>
    <string name="unable_to_get_video">Unable To Get Video At This Time</string>
    <string name="watch_to_reward">Watch Ad To Unlock Content</string>
    <string name="upgrade">Upgrade</string>
    <string name="first_bracket">(</string>
    <string name="close">Close</string>
    <string name="share">Share</string>
    <string name="share_meta">Invite Friends</string>
    <string name="rate">Rate</string>
    <string name="rate_meta">Review App On Playstore</string>
    <string name="second_bracket">)</string>
    <string name="temperature">Temperature</string>
    <string name="temp_def">Temperature is a physical property of matter that quantitatively expresses hot and cold</string>
    <string name="temp_instr">Thermometer eg. Galileo thermometer, Gas thermometer, Pyrometer, Liquid Thermometer, Resistance Thermometer, etc</string>
    <string name="temp_meta">The Degree Of Heat Present In A Body</string>
    <string name="search">Search</string>
    <string name="area">Area</string>
    <string name="area_meta">The Measurement Of A Surface</string>
    <string name="area_def">Area is the quantity that expresses the extent of a two-dimensional figure or shape or planar lamina, in the plane</string>
    <string name="area_instr">Planimeter</string>
    <string name="sort">Sort</string>
    <string name="sort_by">Sort By</string>
    <string name="cancel">Cancel</string>
    <string name="decimal_notation">Decimal Notation</string>
    <string name="some">thing</string>
    <string name="scientific_notation">Scientific Notation</string>
    <string name="engineering_notation">Engineering notation</string>
    <string name="done">Done</string>
    <string name="prefixes">Prefixes</string>
    <string name="prefix">Prefix</string>
    <string name="preferences">Preferences</string>
    <string name="angle">Angle</string>
    <string name="angle_def">An angle is the figure formed by two rays, called the sides of the angle,
        sharing a common endpoint, called the vertex of the angle</string>
    <string name="angle_instr">
        Circumferentor, Cross staff, Goniometer, Graphometer, Protractor, Theodolite
    </string>
    <string name="comma">Comma </string>
    <string name="e_symbol">E</string>
    <string name="small_ten">⏨</string>
    <string name="dot">Dot </string>
    <string name="space">Space</string>
    <string name="other">Other</string>
    <string name="go_to_settings">To Change <b>Preferences</b> For The Whole App, Go To <b>Settings</b></string>
    <string name="angle_meta">The Figure Between Two Intersecting Rays Or Planes</string>
    <string name="density">Density</string>
    <string name="density_meta">The Mass Of A Body Per Unit Volume</string>
    <string name="density_instr">
        Aerometer (liquids), Dasymeter (gases), Gas collecting tube, Hydrometer (liquids), Pycnometer (liquids)
    </string>
    <string name="title">Title</string>
    <string name="illuminance">Illuminance</string>
    <string name="illuminance_meta">The Total Luminous Flux Per Unit Area</string>
    <string name="favourite">Favourites</string>
    <string name="radioactivity">Radioactivity</string>
    <string name="radioactivity_meta">Activity Of A Quantity Of Radioactive Material</string>
    <string name="radio_def">
        The emission of ionizing radiation or particles caused by the spontaneous disintegration of atomic nuclei
    </string>
    <string name="radio_instr">
        Bubble chamber, Cloud chamber, Dosimeter, Geiger counter, Microchannel plate detector,
        Photographic plate, Photostimulable phosphors, Scintillation counter, Lucas cell
    </string>
    <string name="force">Force</string>
    <string name="force_meta">A Push Or Pull</string>
    <string name="force_instr">
        Force gauge, Spring scale, Strain gauge, Torsion balance, Tribometer
    </string>
    <string name="sound">Sound</string>
    <string name="sound_meta">Vibration That Propagates As An Acoustic Wave</string>
    <string name="sound_instr">
        Microphone, hydrophone, Shock tube, Sound level meter, Seismometer
    </string>
    <string name="inductance">Inductance</string>
    <string name="inductance_meta">Resistance Of A Circuit Element To Changes In Current</string>
    <string name="inductance_def">
        Inductance is the tendency of an electrical conductor to oppose a change in the electric current flowing through it
    </string>
    <string name="inductance_instr">Inductance meter</string>
    <string name="flow">Flow</string>
    <string name="flow_meta">Volume Of Fluid Which Passes Per Unit Time</string>
    <string name="flow_instr">
        Gas meter, Mass flow meter, Metering pump, Water meter
    </string>
    <string name="settings">Settings</string>
    <string name="cooking">Cooking</string>
    <string name="cooking_meta">Quantities Involved In Food Preparation</string>
    <string name="resolution">Resolution</string>
    <string name="resolution_meta">The Number of Pixels A Screen Can Show</string>
    <string name="volume">Volume</string>
    <string name="volume_meta">The Amount Of Space A Body Occupies</string>
    <string name="volume_def">Volume is the quantity of three-dimensional space enclosed by a closed surface, for example, the space that a substance
        (solid, liquid, gas, or plasma) or shape occupies or contains</string>
    <string name="volume_instr">Measuring cup (grained solids, liquids), Flow measurement devices (liquids)
        , Graduated cylinder (liquids), Pipette (liquids), Eudiometer, pneumatic trough (gases)</string>
    <string name="recent">Recently Used</string>
    <string name="order">Order</string>
    <string name="favourites_dialog">Add Conversions To Favourites To View Them Here</string>
    <string name="ascending">Ascending</string>
    <string name="speed">Speed</string>
    <string name="speed_def">The speed of an object is the magnitude of the change of its position</string>
    <string name="speed_meta">How Fast An Object Is Moving</string>
    <string name="speed_instr">
        Radar gun, LIDAR speed gun, Speedometer, Tachometer (speed of rotation), Tachymeter,
        Variometer, Airspeed indicator</string>
    <string name="use_default">Use default</string>
    <string name="descending">Descending</string>
    <string name="_default">Default</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="electric_current">Electric Current</string>
    <string name="current_def">An electric current is the rate of flow
        of electric charge past a point or region.
        An electric current is said to exist when there is a net flow of electric charge through a region
    </string>
    <string name="current_instr">
        Ammeter, Clamp meter, Galvanometer, D\'Arsonval galvanometer
    </string>
    <string name="current_meta">The Rate Of Flow Of Electric Charge</string>
    <string name="menu_button">Menu</string>
    <string name="arrow">Arrow</string>
    <string name="info">Convert\ninfo</string>
    <string name="convert_info">About Quantity</string>
    <string name="selectItems">Select\nitems</string>
    <string name="convert">Convert</string>
    <string name="conversion">Conversions</string>
    <string name="data_storage">Data Storage</string>
    <string name="data_meta">The Amount Of Information In A Storage Medium</string>
    <string name="data_instr">Software utilities</string>
    <string name="heatCapacity">Heat Capacity</string>
    <string name="heat_cap_def">
        Heat capacity or thermal capacity is a physical property of matter, defined
        as the amount of heat to be supplied to a given mass of a material to produce a unit change in its temperature
    </string>
    <string name="heat_cap_instr">
        Constant-volume calorimeter (Bomb calorimeter), Constant-pressure calorimeter (Enthalpy-meter)
    </string>
    <string name="heat_meta">Heat To Raise The Temperature Of A Body By One Degree</string>
    <string name="number_base">Number Base</string>
    <string name="number_base_meta">The Number Of Digits In A Number System</string>
    <string name="time">Time</string>
    <string name="time_def">Time is the indefinite continued progress of existence and events that occur in an apparently
        irreversible succession from the past, through the present, into the future</string>
    <string name="time_instr">Watches, Clocks</string>
    <string name="time_meta">Measured Period During Which An Action Exists</string>
    <string name="angularAcceleration">Angular Acceleration</string>
    <string name="angularAcceleration_meta">Rate Of Change Of Angular Velocity</string>
    <string name="fuel_economy">Fuel Economy</string>
    <string name="fuel_meta">Fuel Consumption With Respect To Distance</string>
    <string name="fuel_def">The fuel economy of an automobile relates distance traveled by a vehicle and the amount of fuel consumed</string>
    <string name="fuel_instr">Flow meter</string>
    <string name="pressure">Pressure</string>
    <string name="pressure_def">Pressure is the force applied perpendicular to the surface of an object per unit area over which that force is distributed</string>
    <string name="pressure_instr">Barometer (For atmospheric pressure), Manometer, Tire-pressure gauge</string>
    <string name="pressure_meta">The Perpendicular Force Per Unit Area</string>
    <string name="angularVelocity">Angular Velocity</string>
    <string name="velocity_def">
         Angular velocity refers to how fast an object
        rotates or revolves relative to another point, i.e. how fast the angular position or orientation of an object changes with time
    </string>
    <string name="velocity_instr">Stroboscope, Tachometer</string>
    <string name="velocity_meta">How Fast An Object Rotates Relative To Another Point</string>
    <string name="energy">Energy</string>
    <string name="energy_def">Energy is the quantitative property that must be transferred to
        an object in order to perform work on, or to heat, the object</string>
    <string name="energy_instr">Energy meters eg.  Electricity meter, Gas meter </string>
    <string name="energy_meta">The Capacity For Doing Work</string>
    <string name="currency">Currency</string>
    <string name="currency_meta">Money Used As A Medium Of Exchange</string>
    <string name="currency_instr">Money counters</string>
    <string name="swap">Swap</string>
    <string name="mass">Mass</string>
    <string name="mass_meta">The Quantity Of Matter Contained In A Body</string>
    <string name="mass_definition">The quantity of matter which a body contains, as measured by its acceleration
        under a given force or by the force exerted on it by a gravitational field</string>
    <string name="mass_instrument">Balance, Weighing Scales, Inertial Balance</string>
    <string name="length">Length</string>
    <string name="length_meta">A Measure Of Distance</string>
    <string name="feedback">Feedback</string>
    <string name="notation">Notation</string>
    <string name="decimal_places">Decimal Places</string>
    <string name="decimal_place_summary">Max Number Of Decimal Places</string>
    <string name="premium_version">Premium Version No Ads $ 1.99</string>
    <string name="cup_of_coffee">Buy Me A Coffee $ 2.99</string>
    <string name="support_team">Support Development Team $ 9.99</string>
    <string name="theme">App Theme</string>
    <string name="choose_theme">Choose Theme</string>
</resources>