<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_button"
        android:icon="@drawable/search_to_add"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favourite"
        android:title="@string/favourite"
        app:showAsAction="never" />

    <item
        android:id="@+id/prefixes"
        android:title="@string/prefixes"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort_black_24dp"
        android:title="@string/sort"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/feedback"
        android:title="@string/feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/upgrade"
        android:title="@string/upgrade"
        app:showAsAction="never" />

</menu>