<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/theme">
        <ListPreference
            app:defaultValue="default"
            app:entries="@array/theme_reply_entries"
            app:entryValues="@array/theme_reply_values"
            app:key="theme"
            app:title="@string/choose_theme"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/conversion">

        <ListPreference
            app:defaultValue="decimal"
            app:entries="@array/notation_entries"
            app:entryValues="@array/notation_values"
            app:key="notation"
            app:persistent="true"
            app:title="@string/notation"
            app:useSimpleSummaryProvider="true" />

        <SeekBarPreference
            android:max="10"
            app:defaultValue="5"
            app:key="sliderValue"
            app:min="0"
            app:persistent="true"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            app:summary="@string/decimal_place_summary"
            app:title="@string/decimal_places" />
    </PreferenceCategory>

    <Preference
        app:icon="@drawable/ic_info"
        app:title="@string/about">
        <intent
            android:targetClass="com.otuolabs.unitconverter.About"
            android:targetPackage="com.otuolabs.unitconverter" />
    </Preference>
</PreferenceScreen>
