<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/separate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants">

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.example.unitconverter.subclasses.MyRadioButton
            android:id="@+id/comma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comma" />

        <com.example.unitconverter.subclasses.MyRadioButton
            android:id="@+id/dot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/dot" />

        <com.example.unitconverter.subclasses.MyRadioButton
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/space" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>