<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/all_round"
    android:theme="@style/Theme.MaterialComponents.DayNight">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93"
        android:id="@+id/rightGuide"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sortText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toTopOf="@id/topGuide"
        tools:text="@string/sort_by" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:id="@+id/firstGroup"
        android:layout_height="wrap_content"
        android:checkedButton="@id/titleButton"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toBottomOf="@id/sortText">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/titleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/recent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent" />

    </RadioGroup>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/order"
        app:layout_constraintEnd_toStartOf="@id/viewDivider1"
        android:text="@string/order"
        app:layout_constraintTop_toBottomOf="@id/firstGroup"
        app:layout_constraintHorizontal_weight="0.2"
        app:layout_constraintBottom_toTopOf="@id/secondGroup"
        app:layout_constraintStart_toStartOf="@id/leftGuide"/>

    <View
        android:layout_width="0dp"
        android:id="@+id/viewDivider1"
        android:layout_height="1dp"
        app:layout_constraintHorizontal_weight="1"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toEndOf="@id/order"
        app:layout_constraintTop_toBottomOf="@id/firstGroup"
        app:layout_constraintBottom_toTopOf="@id/secondGroup"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"/>

    <RadioGroup
        android:id="@+id/secondGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/ascending"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toBottomOf="@id/order">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/ascending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ascending" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/descending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descending" />

    </RadioGroup>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:id="@+id/default_button"
        android:checked="false"
        android:text="@string/use_default"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toBottomOf="@id/viewDivider2" />

    <View
        android:layout_width="0dp"
        android:id="@+id/viewDivider2"
        android:layout_height="1dp"
        android:layout_margin="2dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toEndOf="@id/leftGuide"
        app:layout_constraintTop_toBottomOf="@id/secondGroup"
        app:layout_constraintBottom_toTopOf="@id/default_button"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"/>
</androidx.constraintlayout.widget.ConstraintLayout>










