<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/all_round">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/upgrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:fontFamily="serif"
        android:text="@string/upgrade"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@id/firstGroup"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toTopOf="@id/topGuide" />

    <RadioGroup
        android:id="@+id/firstGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:checkedButton="@id/titleButton"
        app:layout_constraintBottom_toTopOf="@+id/ok_button"
        app:layout_constraintEnd_toStartOf="@+id/rightGuide"
        app:layout_constraintStart_toStartOf="@id/leftGuide"
        app:layout_constraintTop_toBottomOf="@id/upgrade">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/premium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="true"
            android:fontFamily="serif"
            android:text="@string/premium_version"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="14sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/cup_of_coffee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="serif"
            android:text="@string/cup_of_coffee"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="14sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/support_team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="serif"
            android:text="@string/support_team"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="14sp" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ok_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@android:string/ok"
        android:textColor="?android:attr/textColorPrimary"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/rightGuide"
        app:layout_constraintTop_toBottomOf="@id/firstGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>